Revise summer RA description
Remove first year law student language

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -37,14 +37,14 @@ layout: sectioned-page
 			<div class="slice-body">
 
 				<p>
-					<b>Deadline extended:</b> we will be accepting applications for this role on a rolling basis through May 1, 2022. 
+					We are accepting applications for this role through May 1, 2022. 
 				</p>
 				
 				<p>
 					
-					We're seeking incoming first-year law students with a background in technology or design to join the Library
-					Innovation Lab as summer research assistants. <b>Join us this summer to get a head start on adapting to law
-					school and hack on sites that expand access to the law.</b>
+					We’re seeking research assistants with a background in technology, design, or libraries to join the Library 
+					Innovation Lab this summer. <b>Join us to immerse yourself in the work of the Harvard Law School Library and 
+					hack on sites that expand access to the law.</b>
 				</p>
 
 				<p>
@@ -55,10 +55,9 @@ layout: sectioned-page
 				</p>
 
 				<p>
-					As a research assistant, you will have the opportunity to jump into legal academia via a technical
-					standpoint, rooting yourself in a law library focused both on innovation and legal tradition. You will help us
-					imagine and act on new ways to serve the growing community of faculty, librarians and students who are
-					interested in our three tent-pole projects: <a href="https://opencasebook.org">H2O Open Casebook</a>, <a
+					As a research assistant, you will have the opportunity to root yourself in a law library focused both on innovation
+					and legal tradition. You will help us imagine and act on new ways to serve the growing community of faculty, librarians 
+					and students who are interested in our three tent-pole projects: <a href="https://opencasebook.org">H2O Open Casebook</a>, <a
 						href="https://case.law">The Caselaw Access Project</a> and <a href="https://perma.cc">Perma.cc</a>.
 				</p>
 
@@ -69,7 +68,7 @@ layout: sectioned-page
 				</p>
 
 				<p>
-					The ideal research assistant will be an incoming law student with a technical background who is curious,
+					The ideal research assistant will be someone with a technical or design background who is curious,
 					self-motivated and eager to interact directly with our team and the broader law school community. While
 					neither legal nor specific technical expertise is required, we are seeking candidates who would feel
 					comfortable developing alongside a team who works mainly with Django and Vue.
