--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -11,9 +11,7 @@ layout: sectioned-page
 		<div class="slice">
 			<h2>Open positions</h2>
 			<div class="slice-body">
-				<p>
-					<a href="#No_open_Positions">Though we have no open positions at this time, we'd love to hear from you!</a>
-				</p>
+				<p>Though we have no open positions at this time, we'd love to hear from you!</p>
 			</div>
 		</div>
 
