First set of changes

--- a/app/about.html
+++ b/app/about.html
@@ -80,7 +80,7 @@ layout: sectioned-page
   <div class="sleeve">
     <div class="heading-pair">
       <h2>Who we are</h2>
-      <p>The people at the Library Lab.</p>
+      <p>The people at the Lab.</p>
     </div>
       {% include about-people-affiliated.html %}
   </div>
