Add Democratizing Open Knowledge

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,13 @@ custom-scripts: ['jquery-3.1.1.min.js', 'home.js']
       </div>
     </div>
 
+    <div class="slice">
+      <h3>Democratizing Open Knowledge</h3>
+      <div class="slice-body">
+        <p><a href="{{ site.baseurl }}/about/democratizing-open-knowledge">Democratizing Open Knowledge</a> is a three-year program at the Library Innovation Lab to explore the goals articulated in Harvard Library’s <a href="https://library.harvard.edu/about/news/2021-03-24/harvard-library-advancing-open-knowledge">Advancing Open Knowledge</a> strategy from a decentralized and generative perspective.</p>
+      </div>
+    </div>
+
     <a href="{{ site.baseurl }}/about/" role="button" aria-label="Learn more about who we are"><span>Learn more about who we are</span></a>
 
   </div>
