Reindent and add two postings

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -5,44 +5,161 @@ layout: sectioned-page
 ---
 
 <section>
-	<div class="sleeve">
-		<h1>{{ page.title }}</h1>
+  <div class="sleeve">
+    <h1>{{ page.title }}</h1>
 
-		<div class="slice">
-			<h2>Open positions</h2>
-			<div class="slice-body">
-				<p>Though we have no open positions at this time, we'd love to hear from you!</p>
-			</div>
-		</div>
+    <div class="slice">
+      <h2>Open positions</h2>
+      <div class="slice-body">
+        <p>
+          <a href="#storage-researcher">Decentralized Storage Researcher</a>
+        </p>
+        <p>
+          <a href="#research-assistant">Research Assistant / Student Fellow</a>
+        </p>
+      </div>
+    </div>
 
-		<div class="slice">
-			<h2>About us</h2>
-			<div class="slice-body">
-				<p>
-					The Library Innovation Lab is a team of librarians,
-					programmers, artists, and lawyers with a broad mission: to
-					build open source tools and services, open to everyone and
-					in the public interest, solving serious emerging problems
-					from the unique perspective of the world's largest academic
-					law library. On the tech side we work most often with Django,
-					Vue, and Postgres.
-				</p>
-			</div>
-		</div>
+    <div class="slice">
+        <h2 id="storage-researcher">Decentralized Storage Researcher&mdash;academic or contract position</h2>
+        <div class="slice-body">
+          <p>
+            The Harvard Library Innovation Lab seeks paid, contract
+            researchers with substantial technical skills to help us
+            explore and document cutting-edge data storage
+            platforms. At the core of this research is the question:
+            how can important data be stored for the long term with
+            the least cost and risk?
+          </p>
 
-		<div class="slice">
-			<h2 id="diversity-statement">Diversity statement</h2>
-			<div class="slice-body">
-				<p>
-					The work and well-being of the Lab are strengthened profoundly by the
-					diversity of our network and our differences in background, culture,
-					experience, national origin, religion, sexual orientation, and much
-					more. We actively seek and welcome applications from people of color,
-					women, the LGBTQ+ community, and persons with disabilities, as well as
-					applications from researchers and practitioners from across the
-					spectrum of disciplines and methods.
-				</p>
-			</div>
-		</div>
-	</div>
+          <h3>Who should apply?</h3>
+          <p>
+            This is a great project for any technologist who enjoys
+            exploring open source repos and testing how they perform
+            in real world conditions; it may be particularly
+            interesting to academic technologists or open source
+            hackers looking for an excuse to learn more about
+            peer-to-peer data storage and other strategies for
+            long-term cultural preservation.
+          </p>
+
+          <h3>What is the project?</h3>
+          <p>
+            The project will include:
+          </p>
+          <ul>
+            <li>
+              Selecting a range of data storage technologies for
+              analysis, including API storage providers like Amazon
+              S3, established data archival platforms like LOCKSS,
+              emerging data replication protocols like IPFS and
+              hypercore, and emerging data storage offerings like Sia,
+              Storj, and Filecoin.
+            </li>
+            <li>
+              Selecting analysis criteria for the selected
+              technologies, such as cost, complexity, durability, and
+              security.
+            </li>
+            <li>
+              Testing the selected technologies with data of
+              substantial size and cultural value (such as the data
+              collected by
+              our <a href="/projects/perma-cc">Perma.cc</a>
+              and <a href="/projects/caselaw-access-project">Case.law</a>
+              projects) to understand their real world performance and
+              user experience.
+            </li>
+            <li>
+              Publishing a comparison of the selected technologies
+              both as text and as code for others to build
+              on. Everything built at our Lab will be released as open
+              source.
+            </li>
+          </ul>
+
+          <h3>Work location and funding</h3>
+          <p>
+            Work may be in person at Harvard Law School or
+            remote. Funding is available for hourly contracts or
+            academic stipends depending on the nature of your
+            interest.
+          </p>
+
+          <h3>How to apply</h3>
+          <p>
+            Email <a href="mailto:lil@law.harvard.edu?subject=Decentralized Storage Researcher position">lil@law.harvard.edu</a>
+            with a resume and brief statement of interest to get started.
+          </p>
+        </div>
+    </div>
+
+    <div class="slice">
+        <h2 id="research-assistant">Research Assistant / Student Fellow</h2>
+        <div class="slice-body">
+          <p>
+            Students: thinking about legal tech, civic tech, or
+            cultural memory? We have options:
+          </p>
+          <h3>Research Assistants</h3>
+          <p>
+            We’re seeking paid research assistants with a web
+            development background to help us build open source legal
+            tech and civic tech tools
+            like <a href="/projects/perma-cc">Perma.cc</a>, <a href="/projects/h2o">Opencasebook.org</a>,
+            and <a href="/projects/caselaw-access-project">Case.law</a>.
+          </p>
+          <h3>Student Fellows</h3>
+          <p>
+            We offer student fellow positions to provide mentorship to
+            students working on independent projects in the field of
+            open knowledge (legal tech, civic tech, library tech,
+            online governance, etc.). Depending on subject matter and
+            professor relationships, student fellow positions may or
+            may not offer stipend or credit; please reach out to us to
+            discuss.
+          </p>
+          <h3>Eligibility</h3>
+          <p>
+            Positions are open to students inside and outside Harvard,
+            with a preference for students at Harvard Law School and
+            Harvard University.
+          </p>
+          <p>
+            To apply, send a statement of interest to
+            <a href="mailto:lil@law.harvard.edu?subject=Research Assistant position">lil@law.harvard.edu</a>.
+          </p>
+        </div>
+    </div>
+
+    <div class="slice">
+      <h2>About us</h2>
+      <div class="slice-body">
+	<p>
+	  The Library Innovation Lab is a team of librarians,
+	  programmers, artists, and lawyers with a broad mission: to
+	  build open source tools and services, open to everyone and
+	  in the public interest, solving serious emerging problems
+	  from the unique perspective of the world's largest academic
+	  law library. On the tech side we work most often with Django,
+	  Vue, and Postgres.
+	</p>
+      </div>
+    </div>
+
+    <div class="slice">
+      <h2 id="diversity-statement">Diversity statement</h2>
+      <div class="slice-body">
+	<p>
+	  The work and well-being of the Lab are strengthened profoundly by the
+	  diversity of our network and our differences in background, culture,
+	  experience, national origin, religion, sexual orientation, and much
+	  more. We actively seek and welcome applications from people of color,
+	  women, the LGBTQ+ community, and persons with disabilities, as well as
+	  applications from researchers and practitioners from across the
+	  spectrum of disciplines and methods.
+	</p>
+      </div>
+    </div>
+  </div>
 </section>
