--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -88,7 +88,7 @@ layout: sectioned-page
 
           <h3>How to apply</h3>
           <p>
-            Email <a href="mailto:lil@law.harvard.edu?subject=Decentralized Storage Researcher position">lil@law.harvard.edu</a>
+            Email <a href="mailto:lil@law.harvard.edu?subject=Decentralized%20Storage%20Researcher%20position">lil@law.harvard.edu</a>
             with a resume and brief statement of interest to get started.
           </p>
         </div>
@@ -127,7 +127,7 @@ layout: sectioned-page
           </p>
           <p>
             To apply, send a statement of interest to
-            <a href="mailto:lil@law.harvard.edu?subject=Research Assistant position">lil@law.harvard.edu</a>.
+            <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position">lil@law.harvard.edu</a>.
           </p>
         </div>
     </div>
