--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -17,6 +17,9 @@ layout: sectioned-page
         <p>
           <a href="#research-assistant">Research Assistant / Student Fellow</a>
         </p>
+        <p>
+          <a href="#fellows">Fellows</a>
+        </p>
       </div>
     </div>
 
@@ -89,7 +92,7 @@ layout: sectioned-page
           <h3>How to apply</h3>
           <p>
             Email <a href="mailto:lil@law.harvard.edu?subject=Decentralized%20Storage%20Researcher%20position">lil@law.harvard.edu</a>
-            with a resume and brief statement of interest to get started.
+            with a résumé and brief statement of interest to get started.
           </p>
         </div>
     </div>
@@ -103,7 +106,7 @@ layout: sectioned-page
           </p>
           <h3>Research Assistants</h3>
           <p>
-            We’re seeking paid research assistants with a web
+            We're seeking paid research assistants with a web
             development background to help us build open source legal
             tech and civic tech tools
             like <a href="/projects/perma-cc">Perma.cc</a>, <a href="/projects/h2o">Opencasebook.org</a>,
@@ -128,6 +131,86 @@ layout: sectioned-page
           <p>
             To apply, send a statement of interest to
             <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position">lil@law.harvard.edu</a>.
+          </p>
+        </div>
+    </div>
+
+    <div class="slice">
+        <h2 id="fellows">Fellows</h2>
+        <div class="slice-body">
+          <p>
+            The Library Innovation Lab offers a small number of
+            stipended fellowships to people developing tools and
+            communities to explore the future of open knowledge.
+          </p>
+          <h3>Who should apply</h3>
+          <p>
+            Fellowships are a particularly good fit for people&mdash;
+            inside and outside academia!&mdash;with a track record of
+            building tools or leading communities that advance the
+            conversation about cultural knowledge and the internet,
+            and who need financial and institutional support to take
+            their next steps.
+          </p>
+          <p>
+            By "cultural knowledge and the internet," we mean
+            questions like: how do established cultural memory
+            institutions adapt to the internet age and help societies
+            reconstruct and remember their history? How do societies
+            govern themselves, coordinate solutions to problems, and
+            decide who to trust in the evolving information landscape?
+            How do we preserve today's knowledge for future
+            generations?
+          </p>
+          <p>
+            In short, who are we, how did we get here, and where are
+            we going? And who is "we" in a networked world anyway?
+          </p>
+          <p>
+            By "track record of building tools or leading
+            communities," we mean that we want to see your theory of
+            change and how it operates in the world: how have your
+            beliefs about who we are, where we came from, and where
+            we're going been translated to action, whether in code, in
+            writing, or in community organizing, and what are your
+            next steps?
+          </p>
+          <p>
+            More concretely, strong fellowship applicants could include:
+          </p>
+          <ul>
+            <li>
+              Coders building software to help small institutions or
+            communities run and preserve their own digital archives
+            </li>
+            <li>
+              Librarians leading movements for internet access and
+              digital literacy
+            </li>
+            <li>
+              Archivists developing novel practices to empower
+              communities not benefitting from traditional archives
+            </li>
+            <li>
+              Artists and authors helping to explore and translate the
+              cultural impact of new technologies
+            </li>
+          </ul>
+
+          <h3>Fellowship details</h3>
+          <p>
+            Fellowships are individually arranged on a rolling basis,
+            and may be any length from a week to a year. Fellows are
+            expected to visit Harvard in person for a portion of the
+            appointment, but need not be present full time. Stipends
+            are available to support full-time work, but may be
+            prorated depending on time commitment and other sources of
+            support.
+          </p>
+          <h3>To apply</h3>
+          <p>
+            Email a résumé and statement of interest to
+            <a href="mailto:lil@law.harvard.edu?subject=Fellowship">lil@law.harvard.edu</a>.
           </p>
         </div>
     </div>
