--- a/app/about/index.html
+++ b/app/about/index.html
@@ -82,7 +82,16 @@ layout: sectioned-page
       <h2>Who we are</h2>
       <p>The people at the Lab.</p>
     </div>
-      {% include about-people-affiliated.html %}
+    {% assign sections = "Faculty Director, Staff, Fellows, Research Assistants" | split: ", " %}
+    {% for section in sections %}
+      {% assign section_people = site.data.people | where: "affiliated", true | where: "section", section | sort: "sort_name" %}
+      {% if section_people != empty %}
+        <h3>{{ section }}</h3>
+        {% for person in section_people %}
+          {% include about-people-affiliated.html person=person %}
+        {% endfor %}
+      {% endif %}
+    {% endfor %}
   </div>
 </section>
 
@@ -96,7 +105,12 @@ layout: sectioned-page
     </div>
 
     <div class="list">
-      {% include about-people-unaffiliated.html %}
+      {% assign old_friends = site.data.people | where: "affiliated", false | sort: "sort_name" %}
+      {% for person in old_friends %}
+        {% if person.role %}
+          {% include about-people-unaffiliated.html person=person %}
+        {% endif %}
+      {% endfor %}
     </div>
   </div>
 </section>
