--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -80,7 +80,7 @@ layout: sectioned-page
           The work and well-being of the Lab are strengthened profoundly by the
           diversity of our community and our differences in background, culture,
           experience, racial identity, national origin, religion, sexual orientation, and much
-          more. We actively seek and welcome applications from Black and indigenous people and people of color;
+          more. We actively seek and welcome applications from Black and Indigenous people and people of color;
           women and nonbinary people; the LGBTQ+ community; and people with disabilities; as well as
           applications from researchers and practitioners from across the
           spectrum of disciplines, methods, and life experiences.
@@ -137,7 +137,7 @@ layout: sectioned-page
         <h3 id="sc">Support Coordinator</h3>
         <p>
           The Support Coordinator works with the Lab’s product managers to support our users and collaborators, often
-          through email, Zoom, slack, or by writing website documentation and outreach material. This position does not
+          through email, Zoom, Slack, or by writing website documentation and outreach material. This position does not
           require specific technical experience, but does require someone who can quickly learn technical detail and
           clearly communicate between our technical team and users. While open to anyone, in the past this has been a
           strong opportunity for recent library school graduates who plan to go on to technical library positions.
