Jobs and about tweaks

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -13,12 +13,19 @@ layout: sectioned-page
     <div class="slice">
       <h3>What does the Library Innovation Lab do?</h3>
       <div class="slice-body">
-        We build things in libraries.
+        We are a software and design lab tucked inside the world's largest academic law library, building tools and
+        communities for open knowledge. We build open-source software and web services, available to everyone and in
+        the public interest, to explore and to solve emerging information problems from our shared perspective as
+        librarians, programmers, artists, and lawyers.
+        We currently support three long-running services (
+          <a href="https://perma.cc">Perma</a>,
+          <a href="https://opencasebook.org">H2O Open Casebook</a>, and the
+          <a href="https://case.law">Caselaw Access Project</a>
+        ) as well as a range of shorter term experiments.
       </div>
     </div>
 
     <div class="slice">
-
       <h3>How can I get in touch with the Lab?</h3>
       <div class="slice-body">
         <div class="contact-intro">
