--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -26,11 +26,11 @@ layout: sectioned-page
               <li><a href="#prd">Product and Research Director</a></li>
               <li><a href="#em">Engineering Manager</a></li>
               <li><a href="#uxd">Senior UX Designer/Researcher</a></li>
-              <li><a href="#sc">Support Coordinator</a></li>
+              <li><a href="#sc">User Support Coordinator</a></li>
             </ul>
           </li>
           <li>
-            <a href="#staff">Research positions</a>
+            <a href="#research">Research positions</a>
             <ul>
               <li><a href="#storage-researcher">Decentralized Storage Researcher</a></li>
               <li><a href="#research-assistant">Research Assistant / Student Fellow</a></li>
@@ -47,14 +47,14 @@ layout: sectioned-page
         <h3 id="about">About us</h3>
         <p>
           The Library Innovation Lab is a team of librarians, programmers, artists, and lawyers with a broad mission: to
-          build open source tools and services, open to everyone and in the public interest, solving serious emerging
-          problems from the unique perspective of the world's largest academic law library. We currently support three
-          long running services (
+          build open-source tools and services for open knowledge, available to everyone and in the public interest,
+          that solve emerging information problems from the perspective of the world's largest academic law library.
+          We currently support three long-running services (
             <a href="https://perma.cc">Perma</a>,
             <a href="https://opencasebook.org">H2O Open Casebook</a>, and the
             <a href="https://case.law">Caselaw Access Project</a>
-          ) as well as a range of shorter
-          term experiments. On the tech side we work most often with Django, Vue, and Postgres.
+          ) as well as a range of shorter term experiments.
+          On the tech side we work most often with Django, Vue, and Postgres.
         </p>
         <h3 id="why">Why work with us?</h3>
         <p>
@@ -81,7 +81,7 @@ layout: sectioned-page
           diversity of our community and our differences in background, culture,
           experience, racial identity, national origin, religion, sexual orientation, and much
           more. We actively seek and welcome applications from Black and Indigenous people and people of color;
-          women and nonbinary people; the LGBTQ+ community; and people with disabilities; as well as
+          women and non-binary people; the LGBTQ+ community; and people with disabilities; as well as
           applications from researchers and practitioners from across the
           spectrum of disciplines, methods, and life experiences.
         </p>
@@ -106,9 +106,10 @@ layout: sectioned-page
             career trajectory and interests align with our work and mission.
           </i>
         </p>
+        <hr>
         <h3 id="em">Engineering Manager</h3>
         <p>
-          The Engineering Manager will lead LIL’s team of software developers, devops, technologists in residence, and
+          The Engineering Manager will lead LIL’s team of software developers, devops engineers, technologists in residence, and
           contractors. Our engineering manager has a key role not just in ensuring that technical staff have a sense of
           direction about their priorities and impact on our core projects, but also in protecting their time and space
           to think creatively, so they have meaningful room to pursue independent research and projects related to our
@@ -122,6 +123,7 @@ layout: sectioned-page
             career trajectory and interests align with our work and mission.
           </i>
         </p>
+        <hr>
         <h3 id="uxd">Senior UX Designer/Researcher</h3>
         <p>
           The Senior UX Designer/Researcher will work with our product and engineering teams to design and improve LIL’s
@@ -134,7 +136,8 @@ layout: sectioned-page
           <b>To apply:</b> Application form pending. Email <a href="mailto:lil@law.harvard.edu?subject=Senior%20UX%20Designer">lil@law.harvard.edu</a>
           to be alerted when the form is available.
         </p>
-        <h3 id="sc">Support Coordinator</h3>
+        <hr>
+        <h3 id="sc">User Support Coordinator</h3>
         <p>
           The Support Coordinator works with the Lab’s product managers to support our users and collaborators, often
           through email, Zoom, Slack, or by writing website documentation and outreach material. This position does not
@@ -218,6 +221,7 @@ layout: sectioned-page
           with a résumé and brief statement of interest to get started.
         </p>
 
+        <hr>
         <h3 id="research-assistant">Research Assistant / Student Fellow</h3>
         <p>
           Students: thinking about legal tech, civic tech, or
@@ -249,6 +253,7 @@ layout: sectioned-page
           <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position">lil@law.harvard.edu</a>.
         </p>
 
+        <hr>
         <h3 id="fellows">Fellows</h3>
         <p>
           The Library Innovation Lab offers a small number of
