--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -53,7 +53,7 @@ layout: sectioned-page
             <a href="https://perma.cc">Perma</a>,
             <a href="https://opencasebook.org">H2O Open Casebook</a>, and the
             <a href="https://case.law">Caselaw Access Project</a>
-          ) as well as a range of shorter term experiments.
+          ) as well as a range of shorter-term experiments.
           On the tech side we work most often with Django, Vue, and Postgres.
         </p>
         <h3 id="why">Why work with us?</h3>
