Add note about winter break

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -91,6 +91,13 @@ layout: sectioned-page
     <div class="slice">
       <h2 id="staff">Staff positions</h2>
       <div class="slice-body">
+        <p>
+          The Lab will be closed for winter break from Friday,
+          December 23, 2022, to Monday, January 2, 2023. We will begin
+          reviewing applications on our return on January 3.
+        </p>
+      </div>
+      <div class="slice-body">
         <h3 id="prd">Product and Research Director</h3>
         <p>
           The Product and Research Director will report to — and serve as a thought partner to — the Lab’s director.
