Bold winter break message

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -92,9 +92,9 @@ layout: sectioned-page
       <h2 id="staff">Staff positions</h2>
       <div class="slice-body">
         <p>
-          The Lab will be closed for winter break from Friday,
+          <b>The Lab will be closed for winter break from Friday,
           December 23, 2022, to Monday, January 2, 2023. We will begin
-          reviewing applications on our return on January 3.
+          reviewing applications on our return on January 3.</b>
         </p>
       </div>
       <div class="slice-body">
