Add link for UX Researcher position

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -140,8 +140,12 @@ layout: sectioned-page
           matter of esthetic and practice.
         </p>
         <p>
-          <b>To apply:</b> Application form pending. Email <a href="mailto:lil@law.harvard.edu?subject=Senior%20UX%20Designer">lil@law.harvard.edu</a>
-          to be alerted when the form is available.
+          <b>To apply:</b>
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1981303_5341">Application form</a>.
+          <i>
+            In addition to Harvard's standard application form, please provide a short cover letter explaining how your
+            career trajectory and interests align with our work and mission.
+          </i>
         </p>
         <hr>
         <h3 id="sc">User Support Coordinator</h3>
