--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -71,8 +71,8 @@ layout: sectioned-page
         </ul>
         <h3 id="location">Location</h3>
         <p>
-          We are based in a newly renovated space on the Harvard Law School campus. Our full-time staff positions are
-          hybrid in person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
+          We are based in a newly-renovated space on the Harvard Law School campus. Our full-time staff positions are
+          hybrid/in-person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
           positions may be remote by individual arrangement.
         </p>
         <h3 id="ediba">Equity, diversity, inclusion, belonging and antiracism</h3>
