--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -137,7 +137,7 @@ layout: sectioned-page
           user experiences. This person will be responsible for conducting user research, creating wireframes,
           prototypes, and high-fidelity designs, and testing them with users to gather feedback. As a small innovation
           team, we will also look to this person to set the Lab’s tone regarding creativity and exploration, both as a
-          matter of esthetic and practice.
+          matter of aesthetics and practice.
         </p>
         <p>
           <b>To apply:</b>
