Add link for fourth posting

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -150,8 +150,12 @@ layout: sectioned-page
           strong opportunity for recent library school graduates who plan to go on to technical library positions.
         </p>
         <p>
-          <b>To apply:</b> Application form pending. Email <a href="mailto:lil@law.harvard.edu?subject=Support%20Coordinator">lil@law.harvard.edu</a>
-          to be alerted when the form is available.
+          <b>To apply:</b>
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1981328_5341">Application form</a>.
+          <i>
+            In addition to Harvard's standard application form, please provide a short cover letter explaining how your
+            career trajectory and interests align with our work and mission.
+          </i>
         </p>
       </div>
     </div>
