Capitalize first letter of sentence
I wanted to make my first commit something earth shattering!

--- a/app/about/democratizing-open-knowledge.html
+++ b/app/about/democratizing-open-knowledge.html
@@ -39,7 +39,7 @@ layout: simple-page
 
 <h2>Archival Communities at the Edges</h2>
 
-<p>what communities are currently underrepresented in centralized archives, and how might we support them to develop social and technical approaches that work for them?<br />
+<p>What communities are currently underrepresented in centralized archives, and how might we support them to develop social and technical approaches that work for them?<br />
   <em>Example research outputs: tools and social protocols for strong dark archives.</em></p>
 
 <h2>Subsidiarity and Self-governance</h2>
