--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@ description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. We're b
 slug: home
 sharing-image: images/header-splash-logo-ani@1x.gif
 sharing-card-type: summary_large_image
-custom-scripts: ['jquery-3.1.1.min.js', 'home.js']
+custom-scripts: ['home.js']
 ---
 
 <section class="about">
