--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -23,7 +23,7 @@ layout: sectioned-page
           <li>
             <a href="#staff">Staff positions</a>
             <ul>
-              <li><a href="#uxd">Senior UX Designer/Researcher</a></li>
+              <li><a href="#uxd">Senior Product Designer</a></li>
             </ul>
           </li>
           <li>
@@ -88,20 +88,19 @@ layout: sectioned-page
     <div class="slice">
       <h2 id="staff">Staff positions</h2>
       <div class="slice-body">
-        <h3 id="uxd">Senior UX Designer/Researcher</h3>
+        <h3 id="uxd">Senior Product Designer</h3>
         <p>
-          The Senior UX Designer/Researcher will work with our product and engineering teams to design and improve LIL’s
-          user experiences. This person will be responsible for conducting user research, creating wireframes,
-          prototypes, and high-fidelity designs, and testing them with users to gather feedback. As a small innovation
-          team, we will also look to this person to set the Lab’s tone regarding creativity and exploration, both as a
-          matter of aesthetics and practice.
+          As a member of our product team, the Senior Product Designer will help lead the brand and visual development of the lab and its products.
+          Promising candidates will have a strong portfolio demonstrating their ability to execute visual identity and high fidelity product designs. 
+          This includes hands-on experience in user research, brainstorming, and wireframing products and features from inception.
+          This is an opportunity for a design lead to utilize their craft toward helping positive ideas travel further and faster.
         </p>
         <p>
           <b>To apply:</b>
-          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1981303_5341">Application form</a>.
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?partnerid=25240&siteid=5341&PageType=JobDetails&jobid=1989875">Application form</a>.
           <i>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your
-            career trajectory and interests align with our work and mission.
+            career trajectory and interests align with our work and mission, and include a link to your portfolio as well.
           </i>
         </p>
       </div>
