SWEs don't tend to have portfolios.
Updated copyright year (#436)

Restored Why work with us

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -8,35 +8,49 @@ layout: sectioned-page
     <h1>{{ page.title }}</h1>
 
     <div class="slice">
-      <h2>Table of contents</h2>
+      <h2 id="background">Background</h2>
       <div class="slice-body">
+        <h3 id="about">About us</h3>
+        <p>
+          The Library Innovation Lab is a team of librarians, programmers, artists, and lawyers with a broad mission: to
+          build open-source tools and services for open knowledge, available to everyone and in the public interest,
+          that solve emerging information problems from the perspective of the world's largest academic law library.
+          We currently support three long-running services (
+            <a href="https://perma.cc">Perma</a>,
+            <a href="https://opencasebook.org">H2O Open Casebook</a>, and the
+            <a href="https://case.law">Caselaw Access Project</a>
+          ) as well as a range of shorter-term experiments.
+          On the tech side, we work most often with Django, Vue, and Postgres.
+        </p>
+        <h3 id="why">Why work with us?</h3>
+        <p>
+          LIL offers a rare mix of contemplation and action: we are a small software lab within one of the world’s
+          largest law libraries, with a mission both to try new things and to think deeply about what ought to exist
+          for the long haul. Our mission offers a range of benefits for staff:
+        </p>
         <ul>
-          <li>
-            <a href="#background">Background</a>
-            <ul>
-              <li><a href="#about">About us</a></li>
-              <li><a href="#why">Why work with us?</a></li>
-              <li><a href="#location">Location</a></li>
-              <li><a href="#ediba">Equity, diversity, inclusion, belonging and antiracism</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#staff">Staff positions</a>
-            <ul>
-              <li><a href="#uxd">Senior Product Designer</a></li>
-              <li><a href="#sse-frontend">Senior Software Engineer, Frontend</a></li>
-              <li><a href="#sse-backend">Senior Software Engineer, Backend</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#research">Research positions</a>
-            <ul>
-              <li><a href="#storage-researcher">Decentralized Storage Researcher</a></li>
-              <li><a href="#research-assistant">Research Assistant / Student Fellow</a></li>
-              <li><a href="#fellows">Fellows</a></li>
-            </ul>
-          </li>
+          <li>Job stability and support. While we maintain the creative atmosphere and flexibility of a small innovation lab, we're backed by an established institution with strong benefits and support for employees.</li>
+          <li>Room to pursue your research agenda. We are located at the Harvard Law School Library and share a kitchen with  the Berkman Klein Center and metaLAB. Going to events, having conversations, developing your scholarly perspective, and exploring it through creative projects are encouraged. We will specifically prioritize these things at the cost of shipping the next feature.</li>
+          <li>Set your own pace. We are a small, self-directed group that depends on internal motivation rather than externally imposed crunch time.</li>
+          <li>Build open source. All of our projects are open source and otherwise designed to maximize the public benefit of our work.</li>
+          <li>Work on stuff that matters. The projects we make are measured by how they help people in the long term.</li>
         </ul>
+        <h3 id="location">Location</h3>
+        <p>
+          We are based in a newly-renovated space on the Harvard Law School campus. Our full-time staff positions are
+          hybrid/in-person; we typically aim to be in the office Tuesday through Thursday. Contractor and fellowship
+          positions may be remote by individual arrangement.
+        </p>
+        <h3 id="ediba">Equity, diversity, inclusion, belonging and antiracism</h3>
+        <p>
+          The work and well-being of the Lab are strengthened profoundly by the
+          diversity of our community and our differences in background, culture,
+          experience, racial identity, national origin, religion, sexual orientation, and much
+          more. We actively seek and welcome applications from Black and Indigenous people and people of color;
+          women and non-binary people; the LGBTQ+ community; and people with disabilities; as well as
+          applications from researchers and practitioners from across the
+          spectrum of disciplines, methods, and life experiences.
+        </p>
       </div>
     </div>
 
@@ -55,7 +69,6 @@ layout: sectioned-page
           ) as well as a range of shorter-term experiments.
           On the tech side, we work most often with Django, Vue, and Postgres.
         </p>
-        <h3 id="why">Why work with us?</h3>
         <p>
           LIL offers a rare mix of contemplation and action: we are a small software lab within one of the world’s
           largest law libraries, with a mission both to try new things and to think deeply about what ought to exist
@@ -117,7 +130,7 @@ layout: sectioned-page
           <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1994090_5341">Application form</a>.
           <i>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your
-            career trajectory and interests align with our work and mission, and include a link to your portfolio as well.
+            career trajectory and interests align with our work and mission.
           </i>        
         </p>
         <h3 id="sse-backend">Senior Software Engineer, Backend</h3>
@@ -129,7 +142,7 @@ layout: sectioned-page
           <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1994575_5341">Application form</a>.
           <i>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your
-            career trajectory and interests align with our work and mission, and include a link to your portfolio as well.
+            career trajectory and interests align with our work and mission.
           </i>        
         </p>
 
