SWEs don't tend to have portfolios.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -117,7 +117,7 @@ layout: sectioned-page
           <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1994090_5341">Application form</a>.
           <i>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your
-            career trajectory and interests align with our work and mission, and include a link to your portfolio as well.
+            career trajectory and interests align with our work and mission.
           </i>        
         </p>
         <h3 id="sse-backend">Senior Software Engineer, Backend</h3>
@@ -129,7 +129,7 @@ layout: sectioned-page
           <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1994575_5341">Application form</a>.
           <i>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your
-            career trajectory and interests align with our work and mission, and include a link to your portfolio as well.
+            career trajectory and interests align with our work and mission.
           </i>        
         </p>
 
