Drop definite article.

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -9,6 +9,6 @@ layout: simple-page
 <p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p>
 
 <strong>September 19, 2023</strong><br>
-<strong>The Harvard Law School</strong><br>
+<strong>Harvard Law School</strong><br>
 <strong>Cambridge, Massachusetts</strong><br>
 <strong>10AM&ndash;4PM</strong><br>
