--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -6,16 +6,13 @@ layout: simple-page
 
 <h1>{{ page.title }}</h1>
 
-<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p>
+<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p><br>
 
-<p><strong>September 19, 2023</strong><br>
-<strong>Harvard Law School</strong><br>
-<strong>Cambridge, Massachusetts</strong><br>
-<strong>10AM&ndash;4PM</strong><br></p>
+<strong>This event is invitation only. If you have received an invitation but have not yet filled out an <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3tqle6TSLTqiRUzmdbJsixYsvsEftUMakNxJyrFUwXfqQOQ/viewform?usp=sf_link">RSVP / attendee information form</a>, please do so at your earliest convenience.</strong><br>
 
-<p>As we prepare to welcome you to Cambridge on September 19th, here is some information about visiting the Harvard Law School. </p>
+<h2>Where and When</h2>
 
-<p>*If you have not filled out an <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3tqle6TSLTqiRUzmdbJsixYsvsEftUMakNxJyrFUwXfqQOQ/viewform?usp=sf_link">RSVP / attendee information form</a>, please do.*</p>
+<p>The Harvard Law AI Summit will take place September 19, 2023 at the Harvard Law School in Cambridge, Massachusetts. Breakfast and registration will begin at 9am, programming will run from 10am-4pm, and a reception will take place from 5-8pm.</p>
 
 <h2>Directions to Campus</h2>
 
